# unrealcv

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG  CI_DELIVERY.md  CI_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPTICAL_FLOW_COMPLETION_REPORT.md  PR_CLASSIFICATION.md  PR_FILE_AUDIT_REPORT.md  README.md  REMAINING_PR_CLASSIFICATION.md  RealisticRendering.uproject  UnrealCV.uplugin  _pr_body_pr32.md  auto_benchmark.py  build-plugin.py  build.bat  build.py  build.sh  dodo.py  mkdocs.yml  test57_benchmark.py  test57_shipping_benchmark.py  test_camera_benchmark.py  test_optical_flow.py  tox.ini  ue4cv.py  unrealcv_ci_pipeline.py  visualize.m
.claude/: doc-session-protocol.md  settings.json  settings.local.json
.claude/agents/: documentation-sync-agent.md
.devcontainer/: devcontainer.json
.github/: issue_template.md
.github/workflows/: command-schema.yml  cpp-quality.yml  python-api-stability.yml  python-client.yml  python-quality.yml  release-maintenance.yml
Config/: FilterPlugin.ini
Content/: AnnotationColor.uasset  OpaqueMaterial.uasset  OpticalFlowMaterial.license.txt  OpticalFlowMaterial.uasset  SceneDepth.uasset  SceneDepth1.uasset  SceneDepthV1.uasset  SceneDepthWorldUnits.uasset  ScenePlaneDepthWorldUnits.uasset  StencilPPM.uasset  VertexColorMaterial.uasset  WorldNormal.uasset  debug.uasset
Plugins/UnrealCV/: UnrealCV.uplugin
Source/: RealisticRendering.Target.cs  RealisticRenderingEditor.Target.cs
Source/RealisticRendering/: CommandDispatcher.cpp  CommandDispatcher.h  ConsoleHelper.cpp  ConsoleHelper.h  ExecStatus.cpp  ExecStatus.h  MyCharacter.cpp  MyCharacter.h  MyGameViewportClient.cpp  MyGameViewportClient.h  MyHUD.cpp  MyHUD.h  NetworkManager.cpp  NetworkManager.h  RealisticRendering.Build.cs  RealisticRendering.cpp  RealisticRendering.h  TestNetworkManager.cpp  Tester.cpp  Tester.h  UE4CVCommands.cpp  UE4CVCommands.h  UE4CVCommandsCamera.cpp  UE4CVServer.cpp  UE4CVServer.h  ViewMode.cpp  ViewMode.h
Source/UnrealCV/: UnrealCV.Build.cs
benchmark_output/: benchmark_report.json
client/: batch_render.py  batch_rendering.py  demo_client.py  dummy_server.py  message_recorder.py  recorder.txt  test_ue4cv.py  ue4cv.py
client/doc/: gen-doc.py  ue4cv.html
client/examples/: .gitignore  camera-control.py  camera_traj.json  dummy_server.py  faster-rcnn.py  generate-images.ipynb  generate-images.py  interactive-control.py  interactive_client.py  ipynb_util.py  object_category.json  record_camera_trajectory.py
client/matlab/: connect.m  demo.m  demo_ue4cv.m  disconnect.m  request.m  ue4cv.m
client/python/: README.md  demo.py  pyproject.toml  setup.py
client/python/tools/: update_public_api_snapshot.py
client/python/unrealcv/: __init__.py  api.py  automation.py  exceptions.py  launcher.py  models.py  public_api_snapshot.json  util.py
client/scripts/: .gitignore  (+31 more)
docs/: .gitattributes  .gitignore  CHANGELOG.rst  Doxyfile  Makefile  README.md  build_doc.py  command.md  conf.py  contact.md  contents.rst  contribute.rst  docker_util.py  dodo.py  doxygen.md  env.sh  gen_ipynb.py  getting-started.md  index.md  index.rst  index1.rst  ipynb_template.tpl  make_uproject_cpp.sh  plugin.md  requirement.txt  requirements.txt  welcome.rst
examples/: 10lines.py  commands_demo.ipynb  commands_demo.py  data_generation.py  faster_rcnn.py  interactive-control.py  interactive_control.py  live_view.py  run.py  stereo_pair_generation.ipynb
test/: .gitignore  README  README.md  README.rst  benchmark_compare.py  benchmark_extended.json  benchmark_extended.py  benchmark_report.py  benchmark_task.json  camera_test.py  common.py  conftest.py  connection_test.py  docker-run.sh  docker_util.py  echo_server.py  message_server.py  object_test.py  requirements.txt  rr_test.py  seg.py  simple_test.py  stereo.py  stereo_test.py  test-unrealcv.py  test_base_client.py  test_client.py  test_common.py  test_faster_rcnn.py  test_socket_message.py  test_stress.py  testcfg.py  testutil.py  ue4_version_check.py  vis_data.py
test57_benchmark/: test57_report.json
test57_benchmark_shipping/: test57_shipping_report.json
tools/: bootstrap_dev.py
workflow/: README.md  builder.py  config.py  harness.py  log_monitor.py  test_runner.py
(+431 files in other folders)
